--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ body {
 
 header {
   text-align: center;
+  background-color: transparent !important;
+  background: url("img/chandelierBackground.jpg");
   height: 100%;
   background-size: cover;
   padding-bottom: 20%;
