--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
 header {
   text-align: center;
   background-color: transparent !important;
-  background: url("img/chandelierBackground.jpg");
+  background: url("https://raw.githubusercontent.com/s31181/chandelier_circus/master/img/chandelierBackground.jpg");
   height: 100%;
   background-size: cover;
   padding-bottom: 20%;
