--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,57 @@ body {
   height: 100%;
 }
 
+.bar {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+@media (max-width: 400px) {
+  #collapseEx2 {
+    height: 300px;
+  }
+}
+
+.navbar {
+  padding-left: 10%;
+  padding-right: 10%;
+  height: 60px;
+  box-shadow: 0px 0px 0px 0px;
+  background-color: black;
+}
+
+.navbar li {
+  margin-top: -5px;
+  text-align: center;
+  height: 50px;
+  padding-bottom: 2px;
+}
+
+.navbar li:hover {
+  background-color: grey;
+}
+
+.navbar a.navbar-brand {
+  height: 50px;
+  width: 50px;
+  border: solid 2px black;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.navbar a.navbar-brand img {
+  height: 50px;
+  width: 50px;
+}
+
+.navbar a.navbar-brand:hover {
+  height: 50px;
+  width: 50px;
+  border: solid 2px white;
+}
+
 header {
   text-align: center;
   background: transparent !important;
@@ -16,11 +67,21 @@ header {
 }
 
 header img {
-  height: 92%;
-  width: 83%;
+  display: block;
+  max-width: 100%;
+  height: auto;
+  position: relative;
+  padding-top: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: -15%;
 }
 
 header h1 {
+  position: absolute;
+  top: 80%;
+  left: 26%;
+  right: 26%;
   font-size: 3em;
   color: white;
   text-shadow: 2px 2px black;
@@ -105,6 +166,22 @@ header h1 {
 .title {
   text-align: center;
   padding: 10% 7% 5% 7%;
+  background-color: black;
+}
+
+.title h1 {
+  position: absolute;
+  margin-top: -26%;
+  left: 25%;
+  right: 25%;
+  color: white;
+  font-size: 4em;
+}
+
+.title p {
+  padding-top: 5%;
+  font-size: 1.2em;
+  color: white;
 }
 
 .performers {
@@ -121,6 +198,7 @@ header h1 {
 }
 
 #alisonSect {
+  padding-top: 5%;
   padding-bottom: 8%;
 }
 
@@ -161,6 +239,7 @@ header h1 {
 #cornellSect {
   background-color: #white;
   padding-top: 10%;
+  padding-bottom: 7%;
 }
 
 #cornell {
@@ -183,12 +262,48 @@ header h1 {
 
 #cornellBio {
   margin-top: -1%;
-  font-size: 1em;
-  border: groove 30px grey;
+  font-size: 1.2em;
+  border: groove 40px grey;
   border-radius: 50%;
-  height: 450px;
-  width: 450px;
-  padding-top: 9%;
+  height: 500px;
+  width: 500px;
+  padding-top: 8%;
   margin-left: 6%;
   box-shadow: 10px 10px 20px #888888;
+}
+
+#philAndEllenSect {
+  padding-top: 10%;
+  background: linear-gradient(to right, #ff9c7c, #ff1fff);
+  padding-bottom: 7%;
+}
+
+#philAndEllen img {
+  height: 100%;
+  width: 100%;
+}
+
+#philAndEllenBio {
+  font-size: 1.5em;
+  text-align: justify;
+  padding-top: 2%;
+  padding-right: 5%;
+}
+
+#jessicaSect {
+  background-color: #9904ff;
+  padding-top: 5%;
+  padding-bottom: 8%;
+}
+
+#jessica img {
+  height: 75%;
+  width: 75%;
+}
+
+#jessicaBio {
+  padding-right: 5%;
+  text-align: justify;
+  padding-top: 5%;
+  font-size: 1.4em;
 }
